--- a/FasterCap.cbp
+++ b/FasterCap.cbp
@@ -80,6 +80,47 @@
 					<Add option="-lm -lstdc++" />
 				</Linker>
 			</Target>
+			<Target title="Kubuntu_Headless_Debug">
+				<Option output="bin/Kubuntu_Headless_Debug/FasterCap" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
+				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="`wx-config --version=3.0 --static=no --debug --cxxflags`" />
+					<Add option="-fopenmp" />
+					<Add option="-D__WXDEBUG__" />
+					<Add option="-DwxUSE_GUI=0" />
+				</Compiler>
+				<Linker>
+					<Add option="`wx-config --version=3.0 --static=no --debug --libs base`" />
+					<Add option="-fopenmp" />
+					<Add option="-lm -lstdc++" />
+				</Linker>
+			</Target>
+			<Target title="Kubuntu_Headless_Release">
+				<Option output="bin/Kubuntu_Headless_Release/FasterCap" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
+				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add option="`wx-config --version=3.0 --static=no --cxxflags`" />
+					<Add option="-fopenmp" />
+					<Add option="-DNDEBUG" />
+					<Add option="-DwxUSE_GUI=0" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="`wx-config --version=3.0 --static=no --libs base`" />
+					<Add option="-fopenmp" />
+					<Add option="-lm -lstdc++" />
+				</Linker>
+			</Target>
 			<Target title="Win32_Debug">
 				<Option output="bin/Win32_Debug/FasterCap" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
@@ -383,6 +424,51 @@
 					<Add directory="$(#wx)/lib/gcc_lib" />
 				</Linker>
 			</Target>
+			<Target title="Win64_Headless_Debug">
+				<Option output="bin/Win64_Headless_Debug/FasterCap" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
+				<Option projectLinkerOptionsRelation="2" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-pipe" />
+					<Add option="-mthreads" />
+					<Add option='[[if (PLATFORM == PLATFORM_MSW &amp;&amp; (GetCompilerFactory().GetCompilerVersionString(_T(&quot;gcc&quot;)) &gt;= _T(&quot;4.0.0&quot;))) print(_T(&quot;-Wno-attributes&quot;));]]' />
+					<Add option="-fopenmp" />
+					<Add option="-D__GNUWIN32__" />
+					<Add option="-D__WXMSW__" />
+					<Add option="-D__WXDEBUG__" />
+					<Add option="-DwxUSE_GUI=0" />
+					<Add directory="$(#wx)/lib/gcc_lib/mswud" />
+					<Add directory="$(#wx)/include" />
+					<Add directory="$(#wx)/contrib/include" />
+				</Compiler>
+				<ResourceCompiler>
+					<Add directory="$(#wx)/lib/gcc_lib/mswud" />
+					<Add directory="$(#wx)/include" />
+				</ResourceCompiler>
+				<Linker>
+					<Add option="-mthreads -fopenmp -lgomp -lpthread" />
+					<Add library="libwxbase30ud.a" />
+					<Add library="libkernel32.a" />
+					<Add library="libuser32.a" />
+					<Add library="libgdi32.a" />
+					<Add library="libwinspool.a" />
+					<Add library="libcomdlg32.a" />
+					<Add library="libadvapi32.a" />
+					<Add library="libshell32.a" />
+					<Add library="libole32.a" />
+					<Add library="liboleaut32.a" />
+					<Add library="libuuid.a" />
+					<Add library="libcomctl32.a" />
+					<Add library="libwsock32.a" />
+					<Add library="libodbc32.a" />
+					<Add library="libiphlpapi.a" />
+					<Add directory="$(#wx)/lib/gcc_lib" />
+				</Linker>
+			</Target>
 			<Target title="Win64_Release">
 				<Option output="bin/Win64_Release/FasterCap" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
@@ -500,8 +586,30 @@
 		<Unit filename="../LinAlgebra/Vect.h">
 			<Option virtualFolder="LinAlg/" />
 		</Unit>
-		<Unit filename="AboutBox.cpp" />
-		<Unit filename="AboutBox.h" />
+		<Unit filename="AboutBox.cpp">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
+		<Unit filename="AboutBox.h">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
 		<Unit filename="AutomationHelper.cpp">
 			<Option target="Win32_Debug" />
 			<Option target="Win32_Release" />
@@ -518,20 +626,108 @@
 			<Option target="Win64_Debug" />
 			<Option target="Win64_Release" />
 		</Unit>
-		<Unit filename="CmdLineParser.cpp" />
-		<Unit filename="CmdLineParser.h" />
-		<Unit filename="FasterCapApp.cpp" />
-		<Unit filename="FasterCapApp.h" />
+		<Unit filename="FasterCapApp.cpp">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
+		<Unit filename="FasterCapApp.h">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
+		<Unit filename="FasterCapConsole.cpp" />
+		<Unit filename="FasterCapConsole.h" />
 		<Unit filename="FasterCapGlobal.cpp" />
 		<Unit filename="FasterCapGlobal.h" />
-		<Unit filename="FasterCapMain.cpp" />
-		<Unit filename="FasterCapMain.h" />
+		<Unit filename="FasterCapMain.cpp">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
+		<Unit filename="FasterCapMain.h">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
 		<Unit filename="History.txt" />
 		<Unit filename="LICENCE.txt" />
-		<Unit filename="LicenseBox.cpp" />
-		<Unit filename="LicenseBox.h" />
-		<Unit filename="RunDialog.cpp" />
-		<Unit filename="RunDialog.h" />
+		<Unit filename="LicenseBox.cpp">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
+		<Unit filename="LicenseBox.h">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
+		<Unit filename="RunDialog.cpp">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
+		<Unit filename="RunDialog.h">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
 		<Unit filename="Solver/AutoConductor.cpp" />
 		<Unit filename="Solver/AutoConductor.h" />
 		<Unit filename="Solver/AutoElement.cpp" />
@@ -554,6 +750,16 @@
 		<Unit filename="Solver/SphereGen.h" />
 		<Unit filename="resource.rc">
 			<Option compilerVar="WINDRES" />
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
 		</Unit>
 		<Unit filename="stdafx.h" />
 		<Unit filename="test.cpp" />
@@ -562,7 +768,18 @@
 			<Option compile="1" />
 			<Option weight="0" />
 		</Unit>
-		<Unit filename="wxsmith/FasterCapframe.wxs" />
+		<Unit filename="wxsmith/FasterCapframe.wxs">
+			<Option target="CentOS64_Debug" />
+			<Option target="CentOS64_Release" />
+			<Option target="Kubuntu_Debug" />
+			<Option target="Kubuntu_Release" />
+			<Option target="Win32_Debug" />
+			<Option target="Win32_Release" />
+			<Option target="Win64_VC_Debug" />
+			<Option target="Win64_VC_Release" />
+			<Option target="Win64_Debug" />
+			<Option target="Win64_Release" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
